<resources>
    <string name="app_name">Newsletter</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="gender_label">Gender</string>
    <string name="male_radio">Male</string>
    <string name="female_radio">Female</string>
    <string name="hello">Hello</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="insert_title">Create News</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
