<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">
    
    <TextView
        android:id="@+id/title_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:text="@string/insert_title"/>

    <EditText
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/input_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/body"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/input_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/submit"/>


</LinearLayout>